--- a/phone-app/index.html
+++ b/phone-app/index.html
@@ -151,8 +151,7 @@
             type="text"
             id="serverUrl"
             class="server-input"
-            placeholder="Server URL (e.g., ws://192.168.1.100:8000)"
-            value="ws://localhost:8000"
+            placeholder="Server URL (auto-detected)"
         >
 
         <div class="visualizer" id="visualizer">
@@ -325,11 +324,15 @@
             localStorage.setItem('jarvis-server', serverUrlInput.value);
         });
 
-        // Load saved server URL
-        const savedUrl = localStorage.getItem('jarvis-server');
-        if (savedUrl) {
-            serverUrlInput.value = savedUrl;
+        // Auto-detect server URL or load saved
+        function getDefaultWsUrl() {
+            const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const host = window.location.host || 'localhost:8000';
+            return `${protocol}//${host}`;
         }
+
+        const savedUrl = localStorage.getItem('jarvis-server');
+        serverUrlInput.value = savedUrl || getDefaultWsUrl();
     </script>
 </body>
 </html>
