Add feedback system - capture what insights were missed for training

--- a/laptop-ui/index.html
+++ b/laptop-ui/index.html
@@ -157,6 +157,52 @@
             cursor: pointer;
         }
         .clear-btn:hover { border-color: #ef4444; color: #ef4444; }
+        .feedback-btn {
+            width: 100%;
+            padding: 10px;
+            border-radius: 8px;
+            border: none;
+            background: linear-gradient(135deg, #8b5cf6, #6366f1);
+            color: white;
+            cursor: pointer;
+            margin-bottom: 8px;
+            font-weight: 500;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0,0,0,0.8);
+            z-index: 1000;
+            align-items: center;
+            justify-content: center;
+        }
+        .modal.show { display: flex; }
+        .modal-content {
+            background: #18181b;
+            border-radius: 16px;
+            padding: 24px;
+            width: 90%;
+            max-width: 500px;
+        }
+        .modal h2 { margin-bottom: 16px; }
+        .modal textarea {
+            width: 100%;
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid #3f3f46;
+            background: #27272a;
+            color: white;
+            font-size: 0.9rem;
+            margin-bottom: 12px;
+            resize: vertical;
+            min-height: 80px;
+        }
+        .modal label { display: block; margin-bottom: 8px; color: #a1a1aa; font-size: 0.85rem; }
+        .modal-buttons { display: flex; gap: 8px; margin-top: 16px; }
+        .modal-buttons button { flex: 1; padding: 10px; border-radius: 8px; border: none; cursor: pointer; }
+        .btn-submit { background: #22c55e; color: white; }
+        .btn-cancel { background: #3f3f46; color: white; }
         .empty-state {
             text-align: center;
             padding: 60px 20px;
@@ -196,7 +242,25 @@
                 <h3>Live Transcript</h3>
                 <div class="transcript-box" id="transcript"></div>
             </div>
+            <button class="feedback-btn" id="feedbackBtn">Give Feedback</button>
             <button class="clear-btn" id="clearBtn">Clear Session</button>
+        </div>
+    </div>
+
+    <!-- Feedback Modal -->
+    <div class="modal" id="feedbackModal">
+        <div class="modal-content">
+            <h2>Session Feedback</h2>
+            <label>What insights did you wish JARVIS gave you?</label>
+            <textarea id="missedInsights" placeholder="e.g., When they mentioned Stripe, I wanted to know their current valuation and recent news..."></textarea>
+            <label>What would have been helpful?</label>
+            <textarea id="whatWouldHelp" placeholder="e.g., More specific numbers, competitor comparisons, links to sources..."></textarea>
+            <label>Any other notes?</label>
+            <textarea id="feedbackNotes" placeholder="General feedback..."></textarea>
+            <div class="modal-buttons">
+                <button class="btn-cancel" id="cancelFeedback">Cancel</button>
+                <button class="btn-submit" id="submitFeedback">Submit Feedback</button>
+            </div>
         </div>
     </div>
 
@@ -366,6 +430,51 @@
             if (uiWs && uiWs.readyState === WebSocket.OPEN) {
                 uiWs.send(JSON.stringify({ command: 'clear' }));
             }
+        });
+
+        // Feedback handling
+        const feedbackBtn = document.getElementById('feedbackBtn');
+        const feedbackModal = document.getElementById('feedbackModal');
+        const cancelFeedback = document.getElementById('cancelFeedback');
+        const submitFeedback = document.getElementById('submitFeedback');
+        let currentSessionId = null;
+
+        feedbackBtn.addEventListener('click', () => {
+            feedbackModal.classList.add('show');
+        });
+
+        cancelFeedback.addEventListener('click', () => {
+            feedbackModal.classList.remove('show');
+        });
+
+        submitFeedback.addEventListener('click', async () => {
+            const feedback = {
+                missed_insights: document.getElementById('missedInsights').value,
+                what_would_help: document.getElementById('whatWouldHelp').value,
+                notes: document.getElementById('feedbackNotes').value
+            };
+
+            // Get latest session
+            try {
+                const sessionsRes = await fetch('/sessions');
+                const sessions = await sessionsRes.json();
+                if (sessions.sessions && sessions.sessions.length > 0) {
+                    const sessionId = sessions.sessions[0].session_id;
+                    await fetch(`/sessions/${sessionId}/feedback`, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(feedback)
+                    });
+                    alert('Feedback saved! This helps JARVIS improve.');
+                }
+            } catch (err) {
+                console.error('Feedback error:', err);
+            }
+
+            feedbackModal.classList.remove('show');
+            document.getElementById('missedInsights').value = '';
+            document.getElementById('whatWouldHelp').value = '';
+            document.getElementById('feedbackNotes').value = '';
         });
 
         // Auto-connect
